creusot/tests/should_fail/prusti/at_expiry/static_param.stderr
error: Cannot move to 'static since it never expires
 --> static_param.rs:4:11
  |
4 | #[ensures(at::<'static>(true))]
  |           ^^^^^^^^^^^^^^^^^^^

error: aborting due to 1 previous error

